# spacewar

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/text/: controls.txt  credits.txt  game_over.txt  pause.txt  space_war.txt  win.txt
src/: Animation.hpp  AnimationComponent.hpp  AssetIds.hpp  AssetLibrary.cpp  AssetLibrary.hpp  AssetManager.hpp  Background.hpp  BackgroundComponent.hpp  Control.cpp  Display.cpp  Display.hpp  Enemy.hpp  EnemyAi.hpp  EnemyAiComponent.hpp  Entity.cpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp  Events.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  Health.cpp  Health.hpp  Hitbox.cpp  Hitbox.hpp  KeyManager.cpp  KeyManager.hpp  Menu.hpp  MenuComponent.cpp  MenuComponent.hpp  Motion.cpp  Motion.hpp  MusicWrapper.hpp  Obstacle.hpp  Player.cpp  Player.hpp  Position.cpp  Position.hpp  (+13 more)
src/components/: Animation.hpp  Background.cpp  Background.hpp  Control.cpp  Control.hpp  Display.cpp  Display.hpp  Enemy.cpp  Enemy.hpp  EnemyAi.hpp  EnemyControl.cpp  EnemyControl.hpp  Events.hpp  Health.cpp  Health.hpp  Hitbox.cpp  Hitbox.hpp  Menu.cpp  Menu.hpp  MenuBase.hpp  MenuComponent.cpp  MenuComponent.hpp  Motion.cpp  Motion.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  PlayerControl.cpp  PlayerControl.hpp  Position.cpp  Position.hpp  Projectile.cpp  Projectile.hpp  Radius.hpp  SplashScreen.hpp  StartMenu.cpp  StartMenu.hpp  Weapon.cpp  Weapon.hpp
src/core/: AssetIds.hpp  AssetLibrary.cpp  AssetLibrary.hpp  AssetManager.hpp  EntityFactory.cpp  EntityFactory.hpp  Events.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  KeyManager.cpp  KeyManager.hpp  MusicWrapper.hpp  StringWrapper.hpp  entity_utils.hpp  math_utils.hpp
src/systems/: CollisionSystem.cpp  CollisionSystem.hpp  EnemyControlSystem.cpp  EnemyControlSystem.hpp  MenuSystem.cpp  MenuSystem.hpp  Movement.cpp  Movement.hpp  MovementSystem.cpp  MovementSystem.hpp  MusicSystem.cpp  MusicSystem.hpp  PlayerControlSystem.hpp  PlayerControlsystem.cpp  PlayerDeathSystem.cpp  PlayerDeathSystem.hpp  PlayerScoreSystem.cpp  PlayerScoreSystem.hpp  ProjectileDurationSystem.cpp  ProjectileDurationSystem.hpp  Render.cpp  Render.hpp  RenderSystem.cpp  RenderSystem.hpp  SoundSystem.cpp  SoundSystem.hpp  Stage.cpp  Stage.hpp  StageSystem.cpp  StageSystem.hpp  WeaponSystem.cpp  WeaponSystem.hpp
